--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "gmail-send": "^1.8.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
