--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.1",
     "react-dev": "0.0.1",
     "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1",
     "webpack-merge": "^5.7.3"
   },
   "devDependencies": {
