--- a/package.json
+++ b/package.json
@@ -19,19 +19,19 @@
     "express": "^4.17.1",
     "gmail-send": "^1.8.10",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-dev": "0.0.1",
     "react-dom": "^17.0.1",
-    "styled-components": "^5.2.1",
-    "webpack-merge": "^5.7.3"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-react": "^7.12.13",
+    "nodemon": "^2.0.7",
     "babel-loader": "^8.2.2",
     "webpack": "^5.24.4",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-merge": "^5.7.3"
   }
 }
