--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sb-status-checker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "public/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "live-server ./public",
