--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,25 +1,10 @@
 {
-  "function": {
-    "sbstatuschecker0f62e3b4": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    }
-  },
-  "api": {
-    "sbstatus": {
-      "service": "API Gateway",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "sbstatuschecker0f62e3b4",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
-        }
-      ]
+  "function": {},
+  "api": {},
+  "storage": {
+    "sbstatusemails": {
+      "service": "DynamoDB",
+      "providerPlugin": "awscloudformation"
     }
   }
 }
