--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.859.0",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "gmail-send": "^1.8.10",
