--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "public/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "live-server ./public",
+    "start": "node ./local/server",
     "build": "webpack --config webpack.prod.js",
     "build-dev": "webpack --config webpack.dev.js",
     "start-local": "nodemon --watch local/server ./local/server",
