--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./local/server",
     "build": "webpack --config webpack.prod.js",
-    "build-dev": "webpack --config webpack.dev.js",
+    "build-dev": "webpack --config webpack.dev.js -w",
     "start-local": "nodemon --watch local/server ./local/server",
     "test-server": "nodemon --watch local/test ./local/test"
   },
