--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^17.0.1",
     "react-dev": "0.0.1",
     "react-dom": "^17.0.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
